// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test five 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        height={50}
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "borderRadius": 25,
            "height": 50,
            "width": 50,
          }
        }
        width={50}
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 23,
            "bottom": 0,
            "height": 23,
            "justifyContent": "center",
            "left": 30,
            "position": "absolute",
            "width": 23,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#F39B34",
                "fontSize": 23,
              },
              undefined,
              Object {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
            "flexDirection": "column",
            "marginLeft": 10,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          name
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
              },
              Object {
                "color": "#67D44D",
                "textAlign": "left",
              },
            ]
          }
        >
          +
          10
           
          KSM
        </Text>
      </View>
      <View />
    </View>
  </View>
</View>
`;

exports[`Test four 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        height={50}
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "borderRadius": 25,
            "height": 50,
            "width": 50,
          }
        }
        width={50}
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 23,
            "bottom": 0,
            "height": 23,
            "justifyContent": "center",
            "left": 30,
            "position": "absolute",
            "width": 23,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#F39B34",
                "fontSize": 23,
              },
              undefined,
              Object {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
            "flexDirection": "column",
            "marginLeft": 10,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          name
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
              },
              Object {
                "color": "#67D44D",
                "textAlign": "left",
              },
            ]
          }
        >
          +
          10
           
          KSM
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
            },
            Object {
              "alignSelf": "center",
              "color": "#67D44D",
            },
          ]
        }
      >
        +
        $
        10
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test one 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/dot.png",
          }
        }
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 25,
            "borderWidth": 0.8,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
            "flexDirection": "column",
            "marginLeft": 10,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          address#1
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
              },
              Object {
                "color": "#888888",
                "textAlign": "left",
              },
            ]
          }
        >
          
          10
           
          DOT
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
            },
            Object {
              "alignSelf": "center",
              "color": "#888888",
            },
          ]
        }
      >
        
        $
        10
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test three 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/kusama.png",
          }
        }
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 25,
            "borderWidth": 0.8,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 23,
            "bottom": 0,
            "height": 23,
            "justifyContent": "center",
            "left": 30,
            "position": "absolute",
            "width": 23,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#F39B34",
                "fontSize": 23,
              },
              undefined,
              Object {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
            "flexDirection": "column",
            "marginLeft": 10,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          1exaAg2VJRQ...o23R2T6EGdE
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
              },
              Object {
                "color": "#67D44D",
                "textAlign": "left",
              },
            ]
          }
        >
          +
          10
           
          KSM
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
            },
            Object {
              "alignSelf": "center",
              "color": "#67D44D",
            },
          ]
        }
      >
        +
        $
        10
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test two 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/kusama.png",
          }
        }
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 25,
            "borderWidth": 0.8,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 23,
              "bottom": 0,
              "height": 23,
              "justifyContent": "center",
              "left": 30,
              "position": "absolute",
              "width": 23,
            },
            Object {
              "borderColor": "#EA4335",
              "borderWidth": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#EA4335",
                "fontSize": 20,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰅖
        </Text>
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
            "flexDirection": "column",
            "marginLeft": 10,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          address#2
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
              },
              Object {
                "color": "#EA4335",
                "textAlign": "left",
              },
            ]
          }
        >
          -
          10
           
          KSM
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
            },
            Object {
              "alignSelf": "center",
              "color": "#EA4335",
            },
          ]
        }
      >
        -
        $
        10
      </Text>
    </View>
  </View>
</View>
`;
